--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-
+node_modules/
+.idea/
 # testing
 /coverage
 
@@ -19,5 +19,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.idea/
+
 
