--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-
+node_modules/
+.idea/
 # testing
 /coverage
 
 # production
-/build
+
+.idea/workspace.xml
+
 
 # misc
 .DS_Store
@@ -18,4 +20,3 @@
 
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
